# stable-diffusion-xl-burn

./: .gitignore  Cargo.toml  README.md  build.rs  setup-cuda.sh
src/: backend.rs
src/model/: load.rs
src/model/autoencoder/: load.rs  mod.rs
src/model/clip/: load.rs  mod.rs
src/model/groupnorm/: load.rs  mod.rs
src/model/layernorm/: load.rs
src/model/stablediffusion/: load.rs  mod.rs
src/model/unet/: load.rs  mod.rs
